# Estudo_de_c

./: CMakeLists.txt  README.md
.cache/clangd/index/: Exercicio_1.c.EBCF73277B679C4E.idx  Exercicio_11.c.35703D84F5F7C627.idx  Exercicio_12.c.5998A43FBA83FA9E.idx  Exercicio_13.c.9C9C7FBBB025E4EF.idx  Exercicio_2.c.EBF19A7FA9868E31.idx  Exercicio_3.c.5D2049FCAACFEFC5.idx  Exercicio_6.c.E39B80BE6F74CB7C.idx  Exercicio_7.c.900905AE81C3A02B.idx  Exercicio_8.c.5B220CDBA25355AC.idx  Exercicio_9.c.D61DD6519D667EE7.idx
Estudo_doido/: exit.h  test.c
Estudo_doido/Extra_exercicios_ponteiros/: lista.c
Estudo_doido/Extra_exercicios_ponteiros/output/: lista.ilk
Estudo_doido/modulo_10/: Exercicio_6.c  Exercicio_7.c
Estudo_doido/modulo_12/: Exercicio_1.c  Exercicio_2.c
Estudo_doido/modulo_12/output/: Exercicio_1  Exercicio_2
Estudo_doido/modulo_13/: Exercicio_1.c
Estudo_doido/modulo_13/output/: Exercicio_1
Estudo_doido/modulo_7/: Exercicio_1.c  Exercicio_11.c  Exercicio_13.c  Exercicio_15.c  Exercicio_17.c  Exercicio_2.c  Exercicio_6.c  Exercicio_9.c
Estudo_doido/modulo_7/output/: Exercicio_12.ilk  Exercicio_13.ilk  Exercicio_9.ilk
Estudo_doido/modulo_8/: Exercicio_1.c  Exercicio_11.c  Exercicio_12.c  Exercicio_16.c  Exercicio_17.c  Exercicio_3.c  Exercicio_4.c  Exercicio_5  Exercicio_5.c  Exercicio_7.c  Exercicio_8  Exercicio_8.c  Exercicio_9.c
Estudo_doido/modulo_8/output/: Exercicio_16.ilk  (+3 more)
Estudo_doido/modulo_9/: Exercicio_1.c  Exercicio_6  Exercicio_6.c
Estudo_doido/output/: SNAKE  test  test.ilk
Modulo 7/: neg.c
algoritimos/: selection_sort.c
(+7 files in other folders)
